---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
[
    If(
        StmtIf {
            range: 0..28,
            test: NumberLiteral(
                ExprNumberLiteral {
                    range: 3..4,
                    value: Int(
                        1,
                    ),
                },
            ),
            body: [
                Expr(
                    StmtExpr {
                        range: 6..8,
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                range: 6..8,
                                value: Int(
                                    10,
                                ),
                            },
                        ),
                    },
                ),
            ],
            elif_else_clauses: [
                ElifElseClause {
                    range: 9..19,
                    test: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 14..15,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 17..19,
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 17..19,
                                        value: Int(
                                            20,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
                ElifElseClause {
                    range: 20..28,
                    test: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 26..28,
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 26..28,
                                        value: Int(
                                            30,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ],
        },
    ),
]
